<resources>
    <string name="app_name">Criminal Report</string>
    <string name="crime_title">Title</string>

    <string name="c_ac_title">Title: </string>
    <string name="c_ac_detail">Details: </string>
    <string name="c_ac_hint_edittext">Please Enter Title</string>
    <string name="c_ac_solved">Solved</string>
    //date
    <string name="date_picker_title">Date of Crime: </string>

    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="choice_suspect">Chooce Suspect</string>
    <string name="send_crime_report">Send Crime Report</string>

    <!-- Crime Report -->
    <string name="crime_report">%1$s!
The crime was discovered on %2$s. %3$s, and
%4$s
</string>
    <string name="crime_report_solved">The case is
solved</string>
    <string name="crime_report_unsolved">The case is
not solved</string>
    <string name="crime_report_no_suspect">there is
no suspect.</string>
    <string name="crime_report_suspect">the suspect
is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime
Report</string>
    <string name="send_report">Send crime report
via</string>


</resources>
